--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is a folder for practicing react",
   "scripts": {
     "start": "parcel index.html",
+    "build": "parcel build index.html ",
     "test": "jest"
   },
   "repository": {
